# Homomorphism-Encryption-KV-Store-Client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hash.hpp  main.cpp
